--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         "https://chimpstatic.com/mcjs-connected/js/users/4f3fe2befd0e4e257c9ce1a21/e0c6c3286872f5731947b0f8a.js"
       );
     </script>
-    <title>React App</title>
+    <title>The HUBB on Main | Helping us be better</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
